--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="css/ionicons.min.css">
     
-    <link rel="stylesheet" href="css/flaticon.css">
+    <link rel="stylesheet" href="css/flaticon.css" preload>
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -559,16 +559,16 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js" async></script>
-  <script src="js/popper.min.js" async></script>
+  <script src="js/popper.min.js" defer></script>
   <script src="js/bootstrap.min.js" async></script>
   <script src="js/jquery.easing.1.3.js" async></script>
   <script src="js/jquery.waypoints.min.js" async></script>
   <script src="js/jquery.stellar.min.js" async></script>
-  <script src="js/owl.carousel.min.js" async></script>
+  <script src="js/owl.carousel.min.js" defer></script>
   <script src="js/jquery.magnific-popup.min.js" async></script>
   <script src="js/aos.js"></script>
-  <script src="js/jquery.animateNumber.min.js" async async></script>
-  <script src="js/scrollax.min.js"></script>
+  <script src="js/jquery.animateNumber.min.js"  async></script>
+  <script src="js/scrollax.min.js" defer ></script>
   
   <script src="js/main.js" defer></script>
     
