--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
-			            <h1 class="mb-4 mt-3">I'm <span style ="color: transparent; -webkit-text-stroke: 3px;-webkit-text-stroke-color: #b0e0e6;">Web Developer</span></h1>
+			            <h1 class="mb-4 mt-3">I'm <span style ="color: transparent; -webkit-text-stroke: 3px;-webkit-text-stroke-color: #b0e0e6;">Web Developer,<span style="color:transparent;-webkit-text-stroke: 3px; -webkit-text-stroke-color: #1b1b32;>graphic designer</span></span></h1>
 			            <h2 class="mb-4"></h2>
 			            <p><a href="#projects-section" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
@@ -63,24 +63,6 @@
 	        	</div>
 	        </div>
 	      </div>
-
-	      <div class="slider-item">
-	      	<div class="overlay"></div>
-	        <div class="container">
-	          <div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg-2.jpg);">
-	          		<div class="overlay"></div>
-	          	</div>
-		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-		          	<div class="text">
-			            <h1 class="mb-4 mt-3">  <span style="color: transparent; -webkit-text-stroke: 3px; -webkit-text-stroke-color: #b0e0e6;">Graphic designer</span></h1>
-			            <p><a href="#projects-section" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
-		            </div>
-		          </div>
-	        	</div>
-	        </div>
-	      </div>
-	    </div>
     </section>
 
     <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
