--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/site-neige.png);">
 		    					<div class="overlay"></div>
 			    				<div class="text text-center p-4">
-			    					<h3><a href="images/livre-final.png" target="_blank">Site</a></h3>
+			    					<h3><a href="https://adama1010.github.io/" target="_blank">Site</a></h3>
 			    					<span>Web Development</span>
 			    				</div>
 		    				</div>
