--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <div class="text">
               	<p class="mb-4">
 	                <span class="number" data-number="48">0</span>
-	                <span>Project completed</span>
+	                <span style="color: white !important">Project completed</span>
                 </p>
                 
               </div>
